--- a/index.html
+++ b/index.html
@@ -13358,6 +13358,13 @@
     });
   }
 
+  function setVisibility(el, open) {
+    if (!el) return;
+    el.hidden = !open;
+    el.setAttribute("aria-hidden", open ? "false" : "true");
+    el.style.display = open ? "" : "none";
+  }
+
   function getDueTodaySections() {
     return Array.from(document.querySelectorAll('[data-due-today-section]'))
       .map(section => {
@@ -13374,11 +13381,21 @@
   function initializeDueTodayAccordionState() {
     const sections = getDueTodaySections();
     if (!sections.length) return;
+
     sections.forEach(({ accordion, summaryBtn, listEl }) => {
       if (!accordion || !summaryBtn || !listEl) return;
+
       accordion.dataset.open = "false";
       summaryBtn.setAttribute("aria-expanded", "false");
-      listEl.hidden = true;
+      setVisibility(listEl, false);
+
+      if (!summaryBtn.dataset.listenerBound) {
+        summaryBtn.dataset.listenerBound = "true";
+        summaryBtn.addEventListener("click", () => {
+          const nextOpen = accordion.dataset.open !== "true";
+          setDueTodayAccordionOpen(nextOpen, { highlight: nextOpen, source: accordion });
+        });
+      }
     });
   }
 
@@ -13451,13 +13468,6 @@
     if (!instances.length) return;
 
     instances.forEach(({ section, accordion, summaryBtn, summaryText, listEl, emptyEl }) => {
-      if (!summaryBtn.dataset.listenerBound) {
-        summaryBtn.dataset.listenerBound = "true";
-        summaryBtn.addEventListener("click", () => {
-          const nextOpen = accordion.dataset.open !== "true";
-          setDueTodayAccordionOpen(nextOpen, { highlight: nextOpen, source: section });
-        });
-      }
       listEl.innerHTML = "";
       if (!entries.length) {
         section.classList.add("hidden");
@@ -13466,7 +13476,7 @@
         accordion.dataset.open = "false";
         summaryBtn.setAttribute("aria-expanded", "false");
         summaryText.textContent = "0 ready • est —";
-        listEl.hidden = true;
+        setVisibility(listEl, false);
       } else {
         section.classList.remove("hidden");
         emptyEl.classList.add("hidden");
@@ -13474,57 +13484,7 @@
       }
     });
 
-    const pillRow = document.createElement("div");
-    pillRow.className = "due-today-pills";
-    const sprintBtn = document.createElement("button");
-    sprintBtn.className = "pill pill-primary";
-    sprintBtn.type = "button";
-    sprintBtn.textContent = "Start 5m";
-    sprintBtn.addEventListener("click", () => startFiveMinuteSprint(entry.task.id));
-    pillRow.appendChild(sprintBtn);
-
-    const fullBtn = document.createElement("button");
-    fullBtn.className = "pill";
-    fullBtn.type = "button";
-    fullBtn.textContent = "Start full";
-    fullBtn.addEventListener("click", () => startFocus(entry.task.id));
-    pillRow.appendChild(fullBtn);
-
-    item.appendChild(pillRow);
-    return item;
-  }
-
-  function renderDueTodayList(entries) {
-    const instances = getDueTodaySections();
-    if (!instances.length) return;
-
-    instances.forEach(({ section, accordion, summaryBtn, summaryText, listEl, emptyEl }) => {
-      if (!summaryBtn.dataset.listenerBound) {
-        summaryBtn.dataset.listenerBound = "true";
-        summaryBtn.addEventListener("click", () => {
-          const nextOpen = accordion.dataset.open !== "true";
-          setDueTodayAccordionOpen(nextOpen, { highlight: nextOpen, source: section });
-        });
-      }
-      listEl.innerHTML = "";
-      if (!entries.length) {
-        section.classList.add("hidden");
-        emptyEl.classList.remove("hidden");
-        accordion.classList.add("hidden");
-        accordion.dataset.open = "false";
-        summaryBtn.setAttribute("aria-expanded", "false");
-        summaryText.textContent = "0 ready • est —";
-        listEl.hidden = true;
-      } else {
-        section.classList.remove("hidden");
-        emptyEl.classList.add("hidden");
-        accordion.classList.remove("hidden");
-      }
-    });
-
-    if (!entries.length) {
-      return;
-    }
+    if (!entries.length) return;
 
     const readyLabel = entries.length === 1 ? "1 ready" : `${entries.length} ready`;
     const estimatedMinutes = entries.reduce((sum, entry) => {
@@ -13536,12 +13496,50 @@
 
     instances.forEach(({ accordion, summaryBtn, summaryText, listEl }) => {
       summaryText.textContent = `${readyLabel} • ${estimateText}`;
-      entries.forEach(entry => {
-        listEl.appendChild(createDueTodayItem(entry));
-      });
+      entries.forEach(entry => listEl.appendChild(createDueTodayItem(entry)));
       const isOpen = accordion.dataset.open === "true";
       summaryBtn.setAttribute("aria-expanded", isOpen ? "true" : "false");
-      listEl.hidden = !isOpen;
+      setVisibility(listEl, isOpen);
+    });
+  }
+
+  function renderDueTodayList(entries) {
+    const instances = getDueTodaySections();
+    if (!instances.length) return;
+
+    instances.forEach(({ section, accordion, summaryBtn, summaryText, listEl, emptyEl }) => {
+      listEl.innerHTML = "";
+      if (!entries.length) {
+        section.classList.add("hidden");
+        emptyEl.classList.remove("hidden");
+        accordion.classList.add("hidden");
+        accordion.dataset.open = "false";
+        summaryBtn.setAttribute("aria-expanded", "false");
+        summaryText.textContent = "0 ready • est —";
+        setVisibility(listEl, false);
+      } else {
+        section.classList.remove("hidden");
+        emptyEl.classList.add("hidden");
+        accordion.classList.remove("hidden");
+      }
+    });
+
+    if (!entries.length) return;
+
+    const readyLabel = entries.length === 1 ? "1 ready" : `${entries.length} ready`;
+    const estimatedMinutes = entries.reduce((sum, entry) => {
+      const minutes = estimateTaskMinutes(entry.task);
+      return Number.isFinite(minutes) ? sum + minutes : sum;
+    }, 0);
+    const hasEstimate = Number.isFinite(estimatedMinutes) && estimatedMinutes > 0;
+    const estimateText = hasEstimate ? `est ${Math.max(1, Math.round(estimatedMinutes))} min` : "est —";
+
+    instances.forEach(({ accordion, summaryBtn, summaryText, listEl }) => {
+      summaryText.textContent = `${readyLabel} • ${estimateText}`;
+      entries.forEach(entry => listEl.appendChild(createDueTodayItem(entry)));
+      const isOpen = accordion.dataset.open === "true";
+      summaryBtn.setAttribute("aria-expanded", isOpen ? "true" : "false");
+      setVisibility(listEl, isOpen);
     });
   }
 
@@ -13553,7 +13551,7 @@
       const nextState = open ? "true" : "false";
       accordion.dataset.open = nextState;
       summaryBtn.setAttribute("aria-expanded", open ? "true" : "false");
-      listEl.hidden = !open;
+      setVisibility(listEl, open);
       if (open && highlight !== false && (!source || source === section || source === accordion)) {
         window.requestAnimationFrame(() => {
           const firstCard = listEl.querySelector(".due-today-item");
@@ -14651,8 +14649,7 @@
     cards.forEach(({ accordion, summaryBtn, panel, card }) => {
       accordion.dataset.open = open ? "true" : "false";
       summaryBtn.setAttribute("aria-expanded", open ? "true" : "false");
-      panel.hidden = !open;
-      panel.setAttribute("aria-hidden", open ? "false" : "true");
+      setVisibility(panel, open);
       if (open && highlight && (!source || source === card || source === accordion || source === panel)) {
         panel.classList.add("is-highlighted");
         window.setTimeout(() => panel.classList.remove("is-highlighted"), 600);
