--- a/index.html
+++ b/index.html
@@ -1611,10 +1611,14 @@
     .focus {
       font-size: 1.5rem;
       margin: 1rem 0;
-      padding: 1.25rem;
+      padding: clamp(1rem, 3vw, 1.35rem);
       background: rgba(18, 24, 30, 0.88);
       border-radius: var(--radius-lg);
       border: 1px solid rgba(147, 160, 170, 0.18);
+      width: 100%;
+      max-width: min(100%, 100vw);
+      box-sizing: border-box;
+      overflow-x: hidden;
     }
     .distraction-tools {
       margin-top: 1rem;
@@ -1929,13 +1933,13 @@
       }
 
       .focus-overlay__body {
-        padding-right: 0;
+        padding-right: clamp(0rem, 2vw, 0.25rem);
         gap: var(--space-2);
       }
 
       .focus {
         font-size: 1.35rem;
-        padding: 1rem;
+        padding: clamp(0.85rem, 5vw, 1.1rem);
       }
 
       .subtask-row {
@@ -3637,6 +3641,9 @@
       backdrop-filter: blur(10px);
       z-index: 140;
       pointer-events: none;
+      width: 100%;
+      max-width: 100vw;
+      box-sizing: border-box;
       overflow-x: hidden;
     }
 
@@ -3658,8 +3665,9 @@
 
     .focus-overlay__sheet {
       position: relative;
-      width: min(calc(100vw - (2 * var(--sheet-pad))), 580px);
-      max-width: 100%;
+      width: 100%;
+      max-width: min(100vw, calc(100vw - (2 * var(--sheet-pad))), 580px);
+      box-sizing: border-box;
       overflow: hidden;
       border-radius: 28px 28px 16px 16px;
       background: rgba(9, 16, 23, 0.98);
@@ -3674,7 +3682,7 @@
 
     @supports (width: 1dvw) {
       .focus-overlay__sheet {
-        width: min(calc(100dvw - (2 * var(--sheet-pad))), 580px);
+        max-width: min(100dvw, calc(100dvw - (2 * var(--sheet-pad))), 580px);
       }
     }
 
@@ -3687,6 +3695,8 @@
       display: grid;
       gap: var(--space-3);
       width: 580px;
+      max-width: 100%;
+      box-sizing: border-box;
       margin: 0 auto;
     }
 
@@ -3726,7 +3736,8 @@
       gap: var(--space-3);
       max-height: clamp(360px, 70vh, 520px);
       overflow-y: auto;
-      padding-right: 0.25rem;
+      padding-right: clamp(0.15rem, 1.5vw, 0.4rem);
+      box-sizing: border-box;
     }
 
     .focus-overlay__task {
@@ -8201,6 +8212,10 @@
 
     const overlay = $("focus");
     if (overlay) {
+      const overlayNode = document.querySelector(".focus-overlay");
+      if (overlayNode) {
+        overlayNode.style.width = `${window.innerWidth}px`;
+      }
       const focusSheet = overlay.querySelector(".focus-overlay__sheet");
       if (focusSheet && !focusSheet.querySelector(".focus-overlay__sheet-inner")) {
         const inner = document.createElement("div");
@@ -11576,15 +11591,21 @@
   }
 
   function fitFocusOverlayToScreen() {
-    const overlay = $("focus");
+    const overlayNode = document.querySelector(".focus-overlay");
+    if (overlayNode) {
+      overlayNode.style.width = `${window.innerWidth}px`;
+    }
+    const overlay = overlayNode || $("focus");
     if (!overlay || overlay.classList.contains("hidden")) return;
     const focusSheet = overlay.querySelector(".focus-overlay__sheet");
     if (!focusSheet) return;
     overlay.style.maxWidth = "100vw";
-    overlay.style.width = "100%";
+    overlay.style.width = `${window.innerWidth}px`;
+    overlay.style.boxSizing = "border-box";
     overlay.style.overflowX = "hidden";
     focusSheet.style.maxWidth = "100vw";
     focusSheet.style.width = "100%";
+    focusSheet.style.boxSizing = "border-box";
     focusSheet.style.overflow = "hidden";
     const inner = focusSheet.querySelector(".focus-overlay__sheet-inner");
     if (!inner) return;
