--- a/index.html
+++ b/index.html
@@ -3638,6 +3638,10 @@
       backdrop-filter: blur(10px);
       z-index: 140;
       pointer-events: none;
+      width: 100vw;
+      max-width: 100vw;
+      overflow-x: hidden;
+      margin: 0 auto;
     }
 
     body.focus-overlay-active #focus.focus-overlay {
@@ -3652,7 +3656,9 @@
 
     .focus-overlay__sheet {
       position: relative;
-      width: min(94vw, 580px);
+      width: 100%;
+      max-width: 100vw;
+      box-sizing: border-box;
       border-radius: 28px 28px 16px 16px;
       background: rgba(9, 16, 23, 0.98);
       border: 1px solid rgba(148, 163, 184, 0.22);
@@ -3662,6 +3668,7 @@
       gap: var(--space-3);
       transform: translateY(0);
       animation: focus-sheet-enter 240ms ease;
+      overflow-x: hidden;
     }
 
     @keyframes focus-sheet-enter {
@@ -3696,11 +3703,15 @@
     }
 
     .focus-overlay__body {
-      display: grid;
+      display: flex;
+      flex-direction: column;
       gap: var(--space-3);
       max-height: clamp(360px, 70vh, 520px);
       overflow-y: auto;
       padding-right: 0.25rem;
+      width: 100%;
+      max-width: 100vw;
+      overflow-x: hidden;
     }
 
     .focus-overlay__task {
