--- a/index.html
+++ b/index.html
@@ -3713,10 +3713,12 @@
     .focus-overlay__body {
       display: flex;
       flex-direction: column;
-      gap: var(--space-3);
+      gap: clamp(0.65rem, 2vw, 1rem);
       max-height: clamp(360px, 70vh, 520px);
       overflow-y: auto;
-      padding-right: 0.25rem;
+      padding-right: 0.2rem;
+      padding-bottom: calc(env(safe-area-inset-bottom) + 5.5rem);
+      scroll-padding-bottom: calc(env(safe-area-inset-bottom) + 5.5rem);
       width: 100%;
       max-width: 100vw;
       overflow-x: hidden;
@@ -3724,13 +3726,60 @@
 
     .focus-overlay__task {
       display: grid;
-      gap: 0.4rem;
+      grid-template-columns: minmax(0, 1fr) auto;
+      align-items: center;
+      gap: 0.35rem 0.45rem;
+      padding: 0.45rem 0.65rem;
+      margin: 0.25rem 0;
+      border-radius: 14px;
+    }
+
+    .focus-overlay__task .task-title {
+      display: inline-flex;
+      align-items: flex-start;
+      gap: 0.35rem;
+      margin: 0;
+    }
+
+    .focus-overlay__task .task-title input[type="checkbox"] {
+      margin-top: 0.2rem;
+    }
+
+    .focus-overlay__task .subtask-name {
+      margin: 0;
+      line-height: 1.35;
+    }
+
+    .focus-overlay__task .timer-label {
+      justify-self: end;
+      margin-left: auto;
+      font-size: 0.72rem;
+    }
+
+    .focus-overlay__task .task-actions {
+      display: inline-flex;
+      gap: 0.3rem;
+      flex-wrap: wrap;
+      justify-self: end;
+    }
+
+    .focus-overlay__task .task-actions button,
+    .focus-overlay__task .task-actions .icon-button {
+      padding: 0.25rem 0.45rem;
+      border-radius: 10px;
+      font-size: 0.8rem;
+      min-height: 0;
     }
 
     .focus-overlay__actions {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
       gap: 0.65rem;
+      position: sticky;
+      bottom: calc(env(safe-area-inset-bottom) + 4.25rem);
+      background: rgba(9, 16, 23, 0.98);
+      padding-bottom: calc(env(safe-area-inset-bottom) + 0.5rem);
+      z-index: 2;
     }
 
     .focus-overlay__actions button {
@@ -10423,6 +10472,9 @@
       startTime: null,
       completionTime: null,
       durationMinutes: null,
+      activeDurationMs: 0,
+      lastResumedAt: null,
+      isPaused: false,
       isFirstThree: Boolean(options.isFirstThree),
       deferredUntilUnlock: Boolean(options.deferredUntilUnlock)
     };
@@ -10442,11 +10494,18 @@
       durationMinutes: sub.durationMinutes !== undefined && sub.durationMinutes !== null && Number.isFinite(Number(sub.durationMinutes))
         ? Number(sub.durationMinutes)
         : null,
+      activeDurationMs: Number.isFinite(Number(sub.activeDurationMs)) ? Number(sub.activeDurationMs) : 0,
+      lastResumedAt: sub.lastResumedAt || null,
+      isPaused: Boolean(sub.isPaused),
       isFirstThree: Boolean(sub.isFirstThree),
       deferredUntilUnlock: Boolean(sub.deferredUntilUnlock)
     };
     if (normalized.durationMinutes === null && normalized.startTime && normalized.completionTime) {
       normalized.durationMinutes = calculateDurationMinutes(normalized.startTime, normalized.completionTime);
+    }
+    if (normalized.completed) {
+      normalized.isPaused = false;
+      normalized.lastResumedAt = null;
     }
     return normalized;
   }
@@ -10555,6 +10614,28 @@
     }
   }
 
+  function getSubTaskElapsedMs(sub, includeRunning = true) {
+    if (!sub) return 0;
+    const base = Math.max(0, Number(sub.activeDurationMs) || 0);
+    if (!includeRunning) {
+      return base;
+    }
+    if (!sub.startTime || sub.completed || sub.isPaused) {
+      return base;
+    }
+    const resumeReference = sub.lastResumedAt || sub.startTime;
+    const resumeDate = new Date(resumeReference);
+    if (Number.isNaN(resumeDate.getTime())) {
+      return base;
+    }
+    return base + Math.max(0, Date.now() - resumeDate.getTime());
+  }
+
+  function dispatchFocusStepEvent(eventName, detail) {
+    const target = $("focus") || document;
+    target.dispatchEvent(new CustomEvent(eventName, { bubbles: true, detail }));
+  }
+
   function trackTimer(sub, timerEl) {
     if (!timerEl) return;
     stopTimerForSubTask(sub.id);
@@ -10566,14 +10647,18 @@
       timerEl.textContent = "Timer: --";
       return;
     }
+    if (sub.isPaused) {
+      const pausedElapsed = getSubTaskElapsedMs(sub, false);
+      timerEl.textContent = `Paused – ${formatElapsedMs(pausedElapsed)}`;
+      return;
+    }
     const update = () => {
-      const startDate = new Date(sub.startTime);
-      if (Number.isNaN(startDate.getTime())) {
+      const elapsedMs = getSubTaskElapsedMs(sub);
+      if (!Number.isFinite(elapsedMs) || elapsedMs < 0) {
         timerEl.textContent = "Timer: --";
         return;
       }
-      const now = new Date();
-      timerEl.textContent = `Timer: ${formatElapsedMs(now.getTime() - startDate.getTime())}`;
+      timerEl.textContent = `Timer: ${formatElapsedMs(elapsedMs)}`;
     };
     update();
     const intervalId = setInterval(update, 1000);
@@ -11298,11 +11383,56 @@
   function startSubTask(taskIndex, subIndex, options = {}) {
     const { task, taskIndex: resolvedIndex, sub } = resolveTaskAndSub(taskIndex, subIndex, options);
     if (!task || !sub) return;
-    sub.startTime = new Date().toISOString();
+    const nowIso = new Date().toISOString();
+    sub.startTime = nowIso;
+    sub.lastResumedAt = nowIso;
+    sub.activeDurationMs = 0;
+    sub.isPaused = false;
     sub.completed = false;
     sub.completionTime = null;
     sub.durationMinutes = null;
+    stopTimerForSubTask(sub.id);
     refreshAfterSubTaskChange(resolvedIndex, { ...options, focusOnly: true, taskId: task.id });
+  }
+
+  function pauseSubTask(taskIndex, subIndex, options = {}) {
+    const { task, taskIndex: resolvedIndex, sub, subIndex: resolvedSubIndex } = resolveTaskAndSub(taskIndex, subIndex, options);
+    if (!task || !sub || !sub.startTime || sub.completed || sub.isPaused) return;
+    const resumeReference = sub.lastResumedAt || sub.startTime;
+    const resumeDate = new Date(resumeReference);
+    const base = Math.max(0, Number(sub.activeDurationMs) || 0);
+    const now = Date.now();
+    const additional = Number.isNaN(resumeDate.getTime()) ? 0 : Math.max(0, now - resumeDate.getTime());
+    sub.activeDurationMs = base + additional;
+    sub.lastResumedAt = null;
+    sub.isPaused = true;
+    stopTimerForSubTask(sub.id);
+    dispatchFocusStepEvent("focus:step-paused", {
+      taskId: task.id,
+      subId: sub.id,
+      taskIndex: resolvedIndex,
+      subIndex: resolvedSubIndex
+    });
+    refreshAfterSubTaskChange(resolvedIndex, { ...options, focusOnly: true, taskId: task.id, subId: sub.id });
+  }
+
+  function resumeSubTask(taskIndex, subIndex, options = {}) {
+    const { task, taskIndex: resolvedIndex, sub, subIndex: resolvedSubIndex } = resolveTaskAndSub(taskIndex, subIndex, options);
+    if (!task || !sub || sub.completed) return;
+    const nowIso = new Date().toISOString();
+    if (!sub.startTime) {
+      sub.startTime = nowIso;
+      sub.activeDurationMs = Math.max(0, Number(sub.activeDurationMs) || 0);
+    }
+    sub.lastResumedAt = nowIso;
+    sub.isPaused = false;
+    dispatchFocusStepEvent("focus:step-resumed", {
+      taskId: task.id,
+      subId: sub.id,
+      taskIndex: resolvedIndex,
+      subIndex: resolvedSubIndex
+    });
+    refreshAfterSubTaskChange(resolvedIndex, { ...options, focusOnly: true, taskId: task.id, subId: sub.id });
   }
 
   function toggleSubTaskCompletion(taskIndex, subIndex, isCompleted, options = {}) {
@@ -11310,11 +11440,19 @@
     if (!task || !sub) return;
     if (isCompleted) {
       if (!sub.startTime) {
-        sub.startTime = new Date().toISOString();
+        const nowIso = new Date().toISOString();
+        sub.startTime = nowIso;
+        sub.lastResumedAt = nowIso;
+        sub.activeDurationMs = 0;
       }
+      const completionTimestamp = new Date().toISOString();
+      const elapsedMs = getSubTaskElapsedMs(sub);
       sub.completed = true;
-      sub.completionTime = new Date().toISOString();
-      sub.durationMinutes = calculateDurationMinutes(sub.startTime, sub.completionTime) ?? 0;
+      sub.completionTime = completionTimestamp;
+      sub.durationMinutes = Number.isFinite(elapsedMs) && elapsedMs > 0 ? Number((elapsedMs / 60000).toFixed(2)) : 0;
+      sub.activeDurationMs = Math.max(0, elapsedMs);
+      sub.lastResumedAt = null;
+      sub.isPaused = false;
       stopTimerForSubTask(sub.id);
       if (task.firstThreeMode) {
         maybeUnlockFirstThree(task);
@@ -11323,6 +11461,8 @@
       sub.completed = false;
       sub.completionTime = null;
       sub.durationMinutes = null;
+      sub.isPaused = false;
+      sub.lastResumedAt = null;
       if (task.firstThreeMode && sub.isFirstThree) {
         task.firstThreeUnlocked = false;
         task.subTasks.forEach(step => {
@@ -11331,6 +11471,7 @@
           }
         });
       }
+      stopTimerForSubTask(sub.id);
     }
     const nextOptions = { ...options, taskId: task.id, subId: sub.id };
     refreshAfterSubTaskChange(resolvedIndex, nextOptions);
@@ -11413,11 +11554,35 @@
       actions.className = "subtask-actions task-actions";
 
       const startBtn = document.createElement("button");
+      startBtn.type = "button";
       startBtn.textContent = sub.startTime ? "🔁" : "▶️";
       startBtn.title = "Start or restart timer";
       startBtn.setAttribute("aria-label", sub.startTime ? "Restart timer" : "Start timer");
       startBtn.onclick = () => startSubTask(taskIndex, subIndex, { taskId: task.id, subId: sub.id });
       actions.appendChild(startBtn);
+
+      const pauseBtn = document.createElement("button");
+      pauseBtn.type = "button";
+      const updatePauseButton = () => {
+        const paused = Boolean(sub.isPaused);
+        pauseBtn.textContent = paused ? "Resume" : "Pause";
+        pauseBtn.title = paused ? "Resume step timer" : "Pause step timer";
+        pauseBtn.setAttribute("aria-label", paused ? "Resume step timer" : "Pause step timer");
+        pauseBtn.setAttribute("aria-pressed", paused ? "true" : "false");
+        pauseBtn.disabled = !sub.startTime || sub.completed;
+      };
+      pauseBtn.onclick = () => {
+        if (!sub.startTime || sub.completed) {
+          return;
+        }
+        if (sub.isPaused) {
+          resumeSubTask(taskIndex, subIndex, { taskId: task.id, subId: sub.id });
+        } else {
+          pauseSubTask(taskIndex, subIndex, { taskId: task.id, subId: sub.id });
+        }
+      };
+      updatePauseButton();
+      actions.appendChild(pauseBtn);
 
       const editBtn = document.createElement("button");
       editBtn.textContent = "✏️";
@@ -11440,6 +11605,7 @@
       row.appendChild(titleWrapper);
       row.appendChild(timer);
       row.appendChild(actions);
+      row.dataset.paused = sub.isPaused ? "true" : "false";
       container.appendChild(row);
     });
 
@@ -11467,6 +11633,9 @@
         sub.completionTime = null;
         sub.durationMinutes = null;
         sub.completed = false;
+        sub.activeDurationMs = 0;
+        sub.lastResumedAt = null;
+        sub.isPaused = false;
       });
       refreshAfterSubTaskChange(taskIndex, { focusOnly: true, taskId: task.id });
     };
